tests/parser/should_fail/ListTuplePunsFail4.script
:set -XNoListTuplePuns
:load ListTuplePunsFail4
